[gd_scene load_steps=4 format=2]

[ext_resource path="res://profile/profile_list.tscn" type="PackedScene" id=1]
[ext_resource path="res://profile/profile_editor.gd" type="Script" id=2]
[ext_resource path="res://profile/profile_mugshot.tscn" type="PackedScene" id=3]

[node name="ProfileEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 41.0
margin_top = 31.0
margin_right = 83.0
margin_bottom = 51.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="."]
margin_left = 151.0
margin_top = 362.0
margin_right = 236.0
margin_bottom = 382.0
text = "New Profile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileList" parent="." instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 122.0
margin_right = 258.0
margin_bottom = 347.0

[node name="Container" type="Control" parent="."]
margin_left = 376.0
margin_top = 124.0
margin_right = 1000.0
margin_bottom = 579.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container"]
margin_left = 10.0
margin_top = 19.0
margin_right = 70.0
margin_bottom = 33.0
text = "Profile ID"

[node name="ProfileId" type="LineEdit" parent="Container"]
margin_left = 114.0
margin_top = 14.0
margin_right = 307.0
margin_bottom = 38.0

[node name="Label2" type="Label" parent="Container"]
margin_left = 12.0
margin_top = 51.0
margin_right = 52.0
margin_bottom = 65.0
text = "Player Name"

[node name="PlayerName" type="LineEdit" parent="Container"]
margin_left = 114.0
margin_top = 47.0
margin_right = 306.0
margin_bottom = 71.0

[node name="Label3" type="Label" parent="Container"]
margin_left = 13.0
margin_top = 81.0
margin_right = 82.0
margin_bottom = 95.0
text = "Body Color"

[node name="BodyColor" type="ColorPickerButton" parent="Container"]
margin_left = 114.0
margin_top = 77.0
margin_right = 308.0
margin_bottom = 99.0
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Container"]
margin_left = 14.0
margin_top = 108.0
margin_right = 145.0
margin_bottom = 122.0
text = "Taunts (one per line)"

[node name="Taunts" type="TextEdit" parent="Container"]
margin_left = 14.0
margin_top = 131.0
margin_right = 315.0
margin_bottom = 238.0

[node name="ProfileMugshot" parent="Container" instance=ExtResource( 3 )]
margin_left = 378.0
margin_top = 11.0
margin_right = 578.0
margin_bottom = 411.0
[connection signal="visibility_changed" from="." to="." method="_ready"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="color_changed" from="Container/BodyColor" to="." method="_on_BodyColor_color_changed"]
